@@ -18,14 +18,12 @@
  */
 package org.netbeans.modules.spellchecker;
 
-import java.io.BufferedReader;
 import java.io.File;
-import java.io.FileFilter;
-import java.io.FileInputStream;
 import java.io.IOException;
-import java.io.InputStreamReader;
+import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
@@ -35,6 +33,7 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.NoSuchElementException;
+import java.util.Objects;
 import org.netbeans.modules.spellchecker.spi.dictionary.Dictionary;
 import org.netbeans.modules.spellchecker.spi.dictionary.DictionaryProvider;
 import org.openide.ErrorManager;
@@ -47,52 +46,46 @@ import org.openide.util.NbBundle;
  */
 @org.openide.util.lookup.ServiceProvider(service=org.netbeans.modules.spellchecker.spi.dictionary.DictionaryProvider.class)
 public class DictionaryProviderImpl implements DictionaryProvider {
-    
+
     /** Creates a new instance of DictionaryProviderImpl */
     public DictionaryProviderImpl() {
     }
 
-    private Map<String, Dictionary> dictionaries = new HashMap<String, Dictionary>();
-    
-//    public DictionaryImpl getDefault() {
-//        return getDictionary(Locale.getDefault());
-//    }
-    
+    private final Map<String, Dictionary> dictionaries = new HashMap<>();
+
+
     public synchronized void clearDictionaries() {
         dictionaries.clear();
     }
-    
+
+    @Override
     public synchronized Dictionary getDictionary(Locale locale) {
         Iterator<String> suffixes = getLocalizingSuffixes(locale);
-        
+
         while (suffixes.hasNext()) {
             Dictionary current = dictionaries.get(suffixes.next());
-            
+
             if (current != null)
                 return current;
         }
-        
+
         return createDictionary(locale);
     }
-    
+
     public static synchronized Locale[] getInstalledDictionariesLocales() {
-        Collection<Locale> hardcoded = new HashSet<Locale>();
-        Collection<Locale> maskedHardcoded = new HashSet<Locale>();
-        Collection<Locale> user = new HashSet<Locale>();
-        
+        Collection<Locale> hardcoded = new HashSet<>();
+        Collection<Locale> maskedHardcoded = new HashSet<>();
+        Collection<Locale> user = new HashSet<>();
+
         for (File dictDir : InstalledFileLocator.getDefault().locateAll("modules/dict", null, false)) {
-            File[] children = dictDir.listFiles(new FileFilter() {
-                public boolean accept(File pathname) {
-                    return pathname.isFile() && pathname.getName().startsWith("dictionary_");
-                }
-            });
-            
+            File[] children = dictDir.listFiles((File pathname) -> pathname.isFile() && pathname.getName().startsWith("dictionary_"));
+
             if (children == null)
                 continue;
-            
+
             for (int cntr = 0; cntr < children.length; cntr++) {
                 String name = children[cntr].getName();
-                
+
                 name = name.substring("dictionary_".length());
 
                 Collection<Locale> target;
@@ -106,12 +99,12 @@ public class DictionaryProviderImpl implements DictionaryProvider {
                         target = user;
                     }
                 }
-                
+
                 int dot = name.indexOf('.');
-                
+
                 if (dot != (-1))
                     name = name.substring(0, dot);
-                
+
                 target.add(Utilities.name2Locale(name));
             }
         }
@@ -120,21 +113,21 @@ public class DictionaryProviderImpl implements DictionaryProvider {
         hardcoded.addAll(user);
         return hardcoded.toArray(new Locale[0]);
     }
-    
+
     private synchronized Dictionary createDictionary(Locale locale) {
         try {
-            List<URL> sources = new ArrayList<URL>();
+            List<URL> sources = new ArrayList<>();
             String suffix = getDictionaryStream(locale, sources);
-            
+
             if (suffix == null) {
                 return null;
             }
 
             Dictionary dict = TrieDictionary.getDictionary(suffix, sources);
 //            DictionaryImpl dict = new DictionaryImpl(locale, suffix, streams);
-//            
+//
             dictionaries.put(suffix, dict);
-            
+
             return dict;
         } catch (IOException e) {
             ErrorManager.getDefault().notify(ErrorManager.INFORMATIONAL, e);
@@ -142,16 +135,16 @@ public class DictionaryProviderImpl implements DictionaryProvider {
         }
     }
 
-    static String getDictionaryStream(Locale locale, List<URL> streams) throws IOException {
-        Iterator suffixes = getLocalizingSuffixes(locale);
-        
+    private static String getDictionaryStream(Locale locale, List<URL> streams) throws IOException {
+        Iterator<String> suffixes = getLocalizingSuffixes(locale);
+
         while (suffixes.hasNext()) {
-            String currentSuffix = (String) suffixes.next();
-            
+            String currentSuffix = suffixes.next();
+
             File file = InstalledFileLocator.getDefault().locate("modules/dict/dictionary" + currentSuffix + ".txt", null, false);
-            
+
             if (file != null) {
-                streams.add(file.toURI().toURL());
+                streams.add(file.toPath().toUri().toURL());
                 return currentSuffix;
             }
 
@@ -163,26 +156,24 @@ public class DictionaryProviderImpl implements DictionaryProvider {
             file = InstalledFileLocator.getDefault().locate("modules/dict/dictionary" + currentSuffix + ".description", cnb, false);
 
             if (file != null && InstalledFileLocator.getDefault().locate("modules/dict/dictionary" + currentSuffix + ".description_hidden", null, false) == null) {
-                BufferedReader in = new BufferedReader(new InputStreamReader(new FileInputStream(file), StandardCharsets.UTF_8));
-
-                try {
-                    String line;
-
-                    while ((line = in.readLine()) != null) {
-                        streams.add(new URL(line));
-                    }
-
-                    return currentSuffix;
-                } finally {
-                    try {
-                        in.close();
-                    } catch (IOException e) {
+                try (var lines = Files.lines(file.toPath())) {
+                    lines.map(URI::create)
+                            .map(u -> {
+                                try {
+                                    return u.toURL();
+                                } catch (MalformedURLException ex) {
+                                    ErrorManager.getDefault().notify(ErrorManager.INFORMATIONAL, ex);
+                                    return null;
+                                }
+                            })
+                            .filter(Objects::nonNull)
+                    .forEach(streams::add);
+                } catch (Exception e) {
                         ErrorManager.getDefault().notify(ErrorManager.INFORMATIONAL, e);
-                    }
                 }
             }
         }
-        
+
         return null;
     }
 
@@ -203,7 +194,7 @@ public class DictionaryProviderImpl implements DictionaryProvider {
     static Iterator<String> getLocalizingSuffixes(Locale locale) {
         return new LocaleIterator(locale);
     }
-    
+
     /** This class (enumeration) gives all localized sufixes using nextElement
      * method. It goes through given Locale and continues through Locale.getDefault()
      * Example 1:
@@ -224,30 +215,24 @@ public class DictionaryProviderImpl implements DictionaryProvider {
      * Branding tokens with underscores are broken apart naturally: so e.g.
      * branding "f4j_ce" looks first for "f4j_ce" branding, then "f4j" branding, then none.
      */
-    private static class LocaleIterator extends Object implements Iterator<String> {
-//        /** this flag means, if default locale is in progress */
-//        private boolean defaultInProgress = false;
-        
+    private static class LocaleIterator implements Iterator<String> {
         /** this flag means, if empty sufix was exported yet */
         private boolean empty = false;
-        
+
         /** current locale, and initial locale */
-        private Locale locale, initLocale;
-        
-        /** current sufix which will be returned in next calling nextElement */
+        private final Locale initLocale;
+
+        /** current suffix which will be returned in next calling nextElement */
         private String current;
-        
+
         /** the branding string in use */
         private String branding;
-        
+
         /** Creates new LocaleIterator for given locale.
          * @param locale given Locale
          */
         public LocaleIterator(Locale locale) {
-            this.locale = this.initLocale = locale;
-//            if (locale.equals(Locale.getDefault())) {
-//                defaultInProgress = true;
-//            }
+            this.initLocale = locale;
             current = '_' + locale.toString();
             if (NbBundle.getBranding() == null)
                 branding = null;
@@ -255,14 +240,15 @@ public class DictionaryProviderImpl implements DictionaryProvider {
                 branding = "_" + NbBundle.getBranding(); // NOI18N
             //System.err.println("Constructed: " + this);
         }
-        
-        /** @return next sufix.
-         * @exception NoSuchElementException if there is no more locale sufix.
+
+        /** @return next suffix.
+         * @exception NoSuchElementException if there is no more locale suffix.
          */
+        @Override
         public String next() throws NoSuchElementException {
             if (current == null)
                 throw new NoSuchElementException();
-            
+
             final String ret;
             if (branding == null) {
                 ret = current;
@@ -297,7 +283,7 @@ public class DictionaryProviderImpl implements DictionaryProvider {
             //System.err.println("Returning: `" + ret + "' from: " + this);
             return ret;
         }
-        
+
         /** Finish a series.
          * If there was a branding prefix, restart without that prefix
          * (or with a shorter prefix); else finish.
@@ -315,16 +301,18 @@ public class DictionaryProviderImpl implements DictionaryProvider {
                 current = null;
             }
         }
-        
+
         /** Tests if there is any sufix.*/
+        @Override
         public boolean hasNext() {
             return (current != null);
         }
-        
+
+        @Override
         public void remove() throws UnsupportedOperationException {
             throw new UnsupportedOperationException();
         }
-        
+
     } // end of LocaleIterator
 
 }
